--- a/index.html
+++ b/index.html
@@ -251,23 +251,22 @@
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
     <p id="text28"><strong>Rock Paper Scissor (Single Player)</strong>
-  </p><p id="text29"><span> >Rock paper scissors is a hand game usually played between two people, in which each player simultaneously 
+  </p><p id="text29"><span>Rock paper scissors is a hand game usually played between two people, in which each player simultaneously 
         forms one of three shapes with an outstretched hand. These shapes are "rock", "paper", and "scissors" With easy to navigate 
         features controls along with a user friendly interface, my game allows you to play this classic game completely virtually 
         against the Computer AI. The AI tries to predict your next move with the data it is fed with when you play the game, hence each round makes
         it harder for you to defeat the AI.</span> <br><br>
-        This game is appropriate for and can be played by people of all ages and isgreat way to improve your problem solving skills.
+        This game is appropriate for and can be played by people of all ages and is a great way to improve your problem solving skills.
         With easy to use UI and user friendly navigation tools, this is one of my favourite games ever. Happy Playing !<br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
     <p id="text28"><strong>Sodoku Player</strong>
-  </p><p id="text29"><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
-        table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
-        the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
-        its paddle as further away from the opposing player as possible.</span> <br><br>
-        Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
-        this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!<br> <br>
+  </p><p id="text29"><span>Sudoku is a logic-based, combinatorial number-placement puzzle. In classic sudoku, the objective is to fill a 9×9 grid with digits so 
+        that each column, each row, and each of the nine 3×3 subgrids that compose the grid contains all of the digits from 1 to 9. Choose your level and get a
+        personalised sodoku puzzle based on just for that. Solve a sodoku puzzle with backtracking and get the solution to your sodoku.</span> <br><br>
+        With user friendly UI and warm colors along with easy navigation tools, this game is great for people of all ages and is a great way to improve your
+        critical thinking, mathematical skills and problem solving abilities.<br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Solve by backtracking</a></li>
