--- a/index.html
+++ b/index.html
@@ -429,6 +429,23 @@
   
 </section>
 
+    <section id="four-section" class="inactive" style="display: none;">
+  <br>
+    <h2 id="text27"><strong>More stuff</strong></h2>
+  
+   <p id="text28"><strong>Check out other apps I made :</strong>
+  </p><p id="text29"><span>Check out some other apps I made in collarboration with my friends, for classes etc. !! 
+      Had lots of fun trying out new stuff and getting to meet many new people who I could work with. My contributions will
+      be mentioned below respective apps if it was a collarborative project. This includes a texting app (fully functional with
+      chat backup, video calling features, voice notes, stickers, unsend messages, make groupchats and more) and many more such 
+      exciting projects !<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Regular Version</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Block Version</a></li>
+  </ul>
+  
+    
+</section>
 
 
 
