--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
   
 </section>
 
-    <section id="four-section" class="inactive" style="display: none;">
+    <section id="more-section" class="inactive" style="display: none;">
   <br>
     <h2 id="text27"><strong>More stuff</strong></h2>
   
