--- a/index.html
+++ b/index.html
@@ -180,6 +180,17 @@
     for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">FranklyWearing</a></li></ul>
+  
+  <p id="text28"><strong>TeeShopperIn</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br></p>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">FranklyWearing</a></li></ul>
+  
+  <h2 style="font-family:'Poppins'; text-align:center; color:#475D73;"><strong><a href=#ref>Affiliate links</a> | <a href=#ref>Promo Codes</a></strong></h2>
+  
+  
 </section>
 
 <section id="four-section" class="inactive" style="display: none;">
@@ -281,6 +292,15 @@
   </ul>
  
          <p id="text28"><strong>Match the Image</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+    
+    <p id="text28"><strong>My own Minecraft</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
   With over 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
