--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   whatever your age and interests might be, there's something that's perfect just for you.</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Spring </a></li></ul>
-
+  <br>
   <p id="text28"><strong>Bonfire</strong>
   </p><p id="text29"><span> Check out my Bonfire store for hoodies, sweatshirts, shirts, joggers, drinkware, bags etc. ! I 
   With over 6+ fundraiser campaigns and more than 50 unique products on my store, there's a wide variety to choose from. 
@@ -146,8 +146,8 @@
     for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Bonfire </a></li></ul>
-
-   <p id="text28"><strong>ViralStyle</strong>
+  <br>
+ <p id="text28"><strong>ViralStyle</strong>
   </p><p id="text29"><span> Check out my Bonfire store for hoodies, sweatshirts, shirts, joggers, drinkware, bags etc. ! I 
   With over 6+ fundraiser campaigns and more than 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
@@ -180,13 +180,13 @@
     for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">FranklyWearing</a></li></ul>
-  
+  <br>
   <p id="text28"><strong>TeeShopperIn</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
   With over 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
   design made just for you! <br></p>
-  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">FranklyWearing</a></li></ul>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">TeeShopperIn</a></li></ul>
   <br><br>
   <h2 style="font-family:'Poppins'; text-align:center; color:#475D73;"><strong><a href=#ref>Affiliate links</a> | <a href=#ref>Promo Codes</a></strong></h2>
   <br>
@@ -378,7 +378,7 @@
     frameworks.</span></p>
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Sign up Now</a></li>
-  </ul>
+  </ul><br>
   <p id="text28"><strong>Grammarly</strong></p>
   <p id="text29"><span>Compose bold, clear, mistake-free writing with Grammarly. Grammarly is a cross-platform cloud-based writing 
     assistant that reviews spelling, grammar, punctuation, clarity, engagement and delivery mistakes. It uses AI to identify and 
@@ -399,7 +399,7 @@
       shop online, showing you the best deals and offers for the items in your cart. Make saving money simple and hassle free with Honey.</span></p>
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Join Honey</a></li>
-  </ul>
+  </ul> <br>
   <p id="text28"><strong>Skillshare</strong></p>
   <p id="text29"><span>Skillshare is an online learning community with thousands of classes for creative and curious people, 
     on topics including illustration, design, photography, video, freelancing, and more. On Skillshare, millions of members come 
@@ -408,7 +408,7 @@
     Discover your passion with skillshare.</span></p>
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Join Free Now</a></li>
-  </ul>
+  </ul> <br>
   <p id="text28"><strong>Fiverr</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
     secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
@@ -419,7 +419,7 @@
     frameworks.</span></p>
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Sign up Now</a></li>
-  </ul>
+  </ul><br>
   <p id="text28"><strong>Canva</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
     secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
@@ -453,14 +453,13 @@
     <h2 id="text27"><strong>More stuff</strong></h2>
   
    <p id="text28"><strong>Check out other apps I made :</strong>
-  </p><p id="text29"><span>Check out some other apps I made in collarboration with my friends, for classes etc. !! 
+  </p><p id="text29"><span>Check out some other apps I made along with the ones I made in collarboration with my friends, for classes etc. !! 
       Had lots of fun trying out new stuff and getting to meet many new people who I could work with. My contributions will
       be mentioned below respective apps if it was a collarborative project. This includes a texting app (fully functional with
       chat backup, video calling features, voice notes, stickers, unsend messages, make groupchats and more) and many more such 
       exciting projects !<br> <br>
   </p>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Regular Version</a></li>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Block Version</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Check out</a></li>
   </ul>
   
     
