--- a/index.html
+++ b/index.html
@@ -460,6 +460,42 @@
       exciting projects !<br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Check out</a></li>
+  </ul> <br>
+   <p id="text28"><strong>Check out my *main* website :</strong>
+  </p><p id="text29"><span>Check out some other apps I made along with the ones I made in collarboration with my friends, for classes etc. !! 
+      Had lots of fun trying out new stuff and getting to meet many new people who I could work with. My contributions will
+      be mentioned below respective apps if it was a collarborative project. This includes a texting app (fully functional with
+      chat backup, video calling features, voice notes, stickers, unsend messages, make groupchats and more) and many more such 
+      exciting projects !<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Check out</a></li>
+  </ul>br>
+   <p id="text28"><strong>Check out my Blog :</strong>
+  </p><p id="text29"><span>Check out some other apps I made along with the ones I made in collarboration with my friends, for classes etc. !! 
+      Had lots of fun trying out new stuff and getting to meet many new people who I could work with. My contributions will
+      be mentioned below respective apps if it was a collarborative project. This includes a texting app (fully functional with
+      chat backup, video calling features, voice notes, stickers, unsend messages, make groupchats and more) and many more such 
+      exciting projects !<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Check out</a></li>
+  </ul><br>
+    <p id="text28"><strong>Attend my events (virtual):</strong>
+  </p><p id="text29"><span>Check out some other apps I made along with the ones I made in collarboration with my friends, for classes etc. !! 
+      Had lots of fun trying out new stuff and getting to meet many new people who I could work with. My contributions will
+      be mentioned below respective apps if it was a collarborative project. This includes a texting app (fully functional with
+      chat backup, video calling features, voice notes, stickers, unsend messages, make groupchats and more) and many more such 
+      exciting projects !<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Check out</a></li>
+  </ul>br>
+   <p id="text28"><strong>Social Media Platforms :</strong>
+  </p><p id="text29"><span>Check out some other apps I made along with the ones I made in collarboration with my friends, for classes etc. !! 
+      Had lots of fun trying out new stuff and getting to meet many new people who I could work with. My contributions will
+      be mentioned below respective apps if it was a collarborative project. This includes a texting app (fully functional with
+      chat backup, video calling features, voice notes, stickers, unsend messages, make groupchats and more) and many more such 
+      exciting projects !<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Check out</a></li>
   </ul>
   
     
