--- a/more.html
+++ b/more.html
@@ -24,7 +24,7 @@
     <li><a class="n04" href="#"><svg><use xlink:href="#icon-9f9"></use></svg><span class="label">Music</span></a></li>
     </ul></div></div></div></div>
 
-<!-- <div id="container03" class="container columns full screen">
+<div id="container03" class="container columns full screen">
   <div class="wrapper"><div class="inner">
     <div>
     <p id="text22"><a href="#one">Apps</a> | <a href="#two"> Music</a> </p>
@@ -35,7 +35,7 @@
     </div> <div>
     <p id="text03"><a href="#book">Books</a> | <a href="#more">More</a></p>
   </div>
-   </div> -->
+   </div>
   </div>
 </div>
 </header>
@@ -52,6 +52,7 @@
   am a feminist who advocates for Mental Health especially in Children and young adults. I'm the founder of the Non Profit Organisations: 
   <a href="http://theraprize.netlify.app">Theraprize</a> and <a href="http://grocereein.netlify.app">Groceree</a> and I also conduct various 
   fundraiser events and campaigns on a very regular basis.</span><br></p>
+  <p style="font-family:Poppins; text-align:left; color:#D0ACA4; font-size:0.75rem">Hello !!</p>
 </section>
   
   <section id="one-section" class="inactive" style="display: none;"><h2 id="text16">
