--- a/tdp.html
+++ b/tdp.html
@@ -1,21 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Anoushka (copy)</title>
+        <title>More</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
-        <meta name="description" content="Hi"/>
-        <meta property="og:site_name" content="Anoushka (copy)"/>
-        <meta property="og:title" content="Anoushka (copy)"/>
-        <meta property="og:type" content="website"/>
-        <meta property="og:description" content="Hi"/>
-        <meta property="og:image" content="https://desipropaganda.carrd.co/assets/images/card.jpg?v=07ea8ede"/>
-        <meta property="og:image:type" content="image/jpeg"/>
-        <meta property="og:image:width" content="1280"/>
-        <meta property="og:image:height" content="800"/>
-        <meta property="og:url" content="https://desipropaganda.carrd.co"/>
-        <meta property="twitter:card" content="summary_large_image"/>
-        <link rel="canonical" href="https://desipropaganda.carrd.co"/>
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,700,700italic" rel="stylesheet" type="text/css"/>
         <style>
             html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
@@ -2149,7 +2137,7 @@
                                 <div class="inner">
                                     <div>
                                         <div id="image01" class="image">
-                                            <img src="assets/images/image01.jpg?v=07ea8ede" alt=""/>
+                                            <img src="poicon-picrew7.png" alt=""/>
                                         </div>
                                     </div>
                                     <div>
@@ -2391,7 +2379,7 @@
                             </li>
                         </ul>
                         <p id="credits">
-                            <a href="https://carrd.co">( Made with Carrd )</a>
+                            <a href="index.html">( Go back to main )</a>
                         </p>
                     </footer>
                 </div>
