--- a/tdp.html
+++ b/tdp.html
@@ -2144,7 +2144,7 @@
                                         <p id="text08">
                                             <strong>more by anoushka</strong>
                                         </p>
-                                        <p id="text02">here &#39;s some more apps and games i have worked on which i &#39;d like for you to check out. the credits are listed if it &#39;s a collab &lt;3</p>
+                                        <p id="text02">here are some more apps and games i have worked on which i &#39;d like for you to check out. the credits are listed if it &#39;s a collab &lt;3</p>
                                     </div>
                                 </div>
                             </div>
@@ -2208,27 +2208,35 @@
                             <strong>Download my apps</strong>
                         </h2>
                         <p id="text13">
-                            <strong>Android Notes App</strong>
+                            <strong>Connect : Texting and Video Calling Android App</strong>
                         </p>
                         <p id="text12">
-                            <span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices as well and runs on dark mode, giving it a very sleek and matte finish.</span>
+                            <span>Download this Android app created in collaboration with <a href=instagram.com/fleurebreu>Fleure</a> and <a href=#>Aalizah</a> which
+                                functions as a fully functional texting app with all the features you'd need.</span>
                             <br/>
                             <br/>
-                            <span>I am yet to upload it on Google Play and hence any feedback on the application will be much appreciated.</span>
+                            <span>We am yet to upload it on Google Play because we're still working on fixing bugs and glitches along with improving the current features 
+                                and hence any feedback on the application will be much appreciated. If the link doesn't work on clicking, please send any of us an email
+                                and we will send you the apk file via mail.</span>
                             <br/>
                             <span>If you recieve a &quot;unsafe file &quot;notification, please do not worry, it is absolutely safe and the notification only shows up because it hasn &#39;t been published on Google Play yet (something I am working on currently doing).</span>
                             <br/>
                             <br/>
                             <span>You can perform the following functions:</span>
                             <br/>
-                            <span>➛ Embed pictures</span>
+                            <span>➛ Dark and Light Mode</span>
                             <br/>
-                            <span>➛ Add links</span>
+                            <span>➛ Chat Wallpapers</span>
                             <br/>
-                            <span>➛ Change colors of notes</span>
+                            <span>➛ Audio Messages</span>
                             <br/>
-                            <span>➛ Search for keywords and more!</span>
+                            <span>➛ Unsending Messages</span>
+                            <br/>
+                            <span>➛ Creating groupchats</span>
+                            <br/>
+                            <span>➛ Inviting others</span>
                         </p>
+                        <p style="font-family:Poppins; text-align:left; color:#D0ACA4; font-size:0.75rem">Lead Designer and co creator</p>
                         <ul id="buttons02" class="buttons">
                             <li>
                                 <a href="#" class="button n01">Download Now</a>
