--- a/tdp.html
+++ b/tdp.html
@@ -2207,6 +2207,7 @@
                         <h2 id="text16">
                             <strong>Download my apps</strong>
                         </h2>
+                           <img src="media/app-logo.png" alt="" style="text-align:center; width:200px;height:200px;"> 
                         <p id="text13">
                             <strong>Connect : Texting and Video Calling Android App</strong>
                         </p>
