--- a/tdp.html
+++ b/tdp.html
@@ -4,6 +4,7 @@
         <title>More</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
+        <link rel="shortcut icon" href="67Pg.gif" type="image/gif">
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,700,700italic" rel="stylesheet" type="text/css"/>
         <style>
             html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
@@ -2214,10 +2215,10 @@
                          <p style="font-family:Poppins; text-align:left; color:#D0ACA4; font-size:0.75rem">Lead Designer and co creator</p>
                         <p id="text12">
                             <span>Download this Android app created in collaboration with <a href=instagram.com/fleurebreu>Fleure</a> and <a href=#>Aalizah</a> which
-                                functions as a fully functional texting app with all the features you'd need.</span>
+                                works as a fully functional texting app with all the features you'd need.</span>
                             <br/>
                             <br/>
-                            <span>We am yet to upload it on Google Play because we're still working on fixing bugs and glitches along with improving the current features 
+                            <span>We are yet to upload it on Google Play because we're still working on fixing bugs and glitches along with improving the current features 
                                 and hence any feedback on the application will be much appreciated. If the link doesn't work on clicking, please send any of us an email
                                 and we will send you the apk file via mail.</span>
                             <br/>
@@ -2243,11 +2244,11 @@
                                 <a href="#" class="button n01">Download Now</a>
                             </li>
                             <li>
-                                <a href="https://domain.ext/path" class="button n02">Button</a>
+                                <a href="#" class="button n02">Button</a>
                             </li>
                         </ul>
                         <p id="text14">
-                            <strong>Real time texting Web App</strong>
+                            <strong>Strong Password Generator</strong>
                         </p>
                         <p id="text15">
                             <span>Sign up to my texting app using your email address and connect with all the other users on the platform. Send texts and chat realtime with your friends and family. Customise your profile with a unique display image.</span>
@@ -2274,7 +2275,7 @@
                             </li>
                         </ul>
                         <p id="text17">
-                            <strong>&#39;Read Music &#39;Web App</strong>
+                            <strong>Desi Name Generator</strong>
                         </p>
                         <p id="text18">
                             <span>Using this web app, click on your required genre (or subgenre) and you will be given a specially curated playlist made just for you to listen to while reading the book.</span>
