--- a/tdp.html
+++ b/tdp.html
@@ -2206,7 +2206,7 @@
                     </section>
                     <section id="one-section">
                         <h2 id="text16">
-                            <strong>Download my apps</strong>
+                            <strong>Collaborative Projects</strong>
                         </h2>
                            <img src="media/app-logo.png" alt="" style="text-align:center; width:200px;height:200px;"> 
                         <p id="text13">
@@ -2247,7 +2247,14 @@
                                 <a href="#" class="button n02">Button</a>
                             </li>
                         </ul>
-                        <p id="text14">
+                       
+                    </section>
+                    <section id="two-section">
+                        <h2 id="text19">
+                            <strong>Personal Projects</strong>
+                        </h2>
+                        
+                         <p id="text14">
                             <strong>Strong Password Generator</strong>
                         </p>
                         <p id="text15">
@@ -2298,20 +2305,7 @@
                             <br/>
                             <span>➛ Not a reader? Not a problem! There &#39;s something for everyone with specially handcrafted playlists for whatever task you &#39;re performing</span>
                         </p>
-                    </section>
-                    <section id="two-section">
-                        <h2 id="text19">
-                            <strong>Stream my Music</strong>
-                        </h2>
-                        <p id="text20">
-                            <strong>&quot;Whole latte Love &quot;</strong>
-                        </p>
-                        <p id="text21">
-                            <span>Stream my new and first ever single, &quot;whole latte love &quot;an instrumental ballad which a part of a school project on all the major streaming services!</span>
-                            <br/>
-                            <br/>
-                            <span>You can also add this to your studying/ regular vibing playlists which would help me a lot.</span>
-                        </p>
+
                     </section>
                     <footer id="footer">
                         <ul id="icons04" class="icons">
