--- a/tdp.html
+++ b/tdp.html
@@ -2258,53 +2258,44 @@
                             <strong>Strong Password Generator</strong>
                         </p>
                         <p id="text15">
-                            <span>Sign up to my texting app using your email address and connect with all the other users on the platform. Send texts and chat realtime with your friends and family. Customise your profile with a unique display image.</span>
-                            <br/>
-                            <br/>
-                            <span>You can see the activity status of other users to check whether they &#39;re online or not, can sign out and sign back in, log in from multiple devices and more! Your chat will remain 100% secure and private and will never be shared with any third party user/service.</span>
-                            <br/>
-                            <br/>
-                            <span>A few among many perks:</span>
-                            <br/>
-                            <span>➛ No installation required</span>
-                            <br/>
-                            <span>➛ Secure by password protection</span>
-                            <br/>
-                            <span>➛ Customisable names and display images</span>
-                            <br/>
-                            <span>➛ Compatible with all devices</span>
-                            <br/>
-                            <span>➛ Search for users and more!</span>
+                            <span>'Your password is weak' is a message we often see while signing up to online platforms and it's so frustrating to come 
+                            up with a new password every single time which fulfills all the criteria requirements of the password (upper case, lower case, number, symbol, 
+                            more than x letters and whatnot). Just use my password generator which gives you a unique alphanumeric combination based on your character
+                            requirement so you don't have to struggle with thinking of the password again.</span>
                         </p>
                         <ul id="buttons03" class="buttons">
                             <li>
-                                <a href="#" class="button n01">Sign up Now</a>
+                                <a href="#" class="button n01">Use Now</a>
                             </li>
                         </ul>
                         <p id="text17">
                             <strong>Desi Name Generator</strong>
                         </p>
                         <p id="text18">
-                            <span>Using this web app, click on your required genre (or subgenre) and you will be given a specially curated playlist made just for you to listen to while reading the book.</span>
-                            <br/>
-                            <br/>
-                            <span>You can seamlessly stream these playlists on either spotify or on my personally developed web music player and also request for new genres/ sub genres , recommend playlists and request to be added on the playlists if you &#39;re an artist yourself. Easy to use and user friendly interface with no ads for feasibility of the users.</span>
-                            <br/>
-                            <br/>
-                            <span>A few among many perks:</span>
-                            <br/>
-                            <span>➛ 100% Free</span>
-                            <br/>
-                            <span>➛ No sign up or installation required</span>
-                            <br/>
-                            <span>➛ More than 1000 songs</span>
-                            <br/>
-                            <span>➛ Wide range of genres and music</span>
-                            <br/>
-                            <span>➛ User friendly UI design for easy navigation</span>
-                            <br/>
-                            <span>➛ Not a reader? Not a problem! There &#39;s something for everyone with specially handcrafted playlists for whatever task you &#39;re performing</span>
+                            <span>'Your password is weak' is a message we often see while signing up to online platforms and it's so frustrating to come 
+                            up with a new password every single time which fulfills all the criteria requirements of the password (upper case, lower case, number, symbol, 
+                            more than x letters and whatnot). Just use my password generator which gives you a unique alphanumeric combination based on your character
+                            requirement so you don't have to struggle with thinking of the password again.</span>
+                            </p>
+                            <ul id="buttons03" class="buttons">
+                            <li>
+                                <a href="#" class="button n01">Use Now</a>
+                            </li>
+                        </ul>
+                             <p id="text17">
+                            <strong>UserName Generator</strong>
                         </p>
+                        <p id="text18">
+                            <span>'This username is taken' is a message we often see while signing up to online platforms and it's so frustrating to come 
+                            up with a new password every single time which fulfills all the criteria requirements of the password (upper case, lower case, number, symbol, 
+                            more than x letters and whatnot). Just use my password generator which gives you a unique alphanumeric combination based on your character
+                            requirement so you don't have to struggle with thinking of the password again.</span>
+                            </p>
+                            <ul id="buttons03" class="buttons">
+                            <li>
+                                <a href="#" class="button n01">Use Now</a>
+                            </li>
+                        </ul>
 
                     </section>
                     <footer id="footer">
