--- a/tdp.html
+++ b/tdp.html
@@ -2254,6 +2254,21 @@
                             <strong>Personal Projects</strong>
                         </h2>
                         
+                        <p id="text14">
+                            <strong>Personal Speech Virtual Assistant</strong>
+                        </p>
+                        <p id="text15">
+                            <span>'Your password is weak' is a message we often see while signing up to online platforms and it's so frustrating to come 
+                            up with a new password every single time which fulfills all the criteria requirements of the password (upper case, lower case, number, symbol, 
+                            more than x letters and whatnot). Just use my password generator which gives you a unique alphanumeric combination based on your character
+                            requirement so you don't have to struggle with thinking of the password again.</span>
+                        </p>
+                        <ul id="buttons03" class="buttons">
+                            <li>
+                                <a href="#" class="button n01">Talk Now</a>
+                            </li>
+                        </ul>
+                        
                          <p id="text14">
                             <strong>Strong Password Generator</strong>
                         </p>
