--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div> <div>
     <p id="text25"><a href="#shop">Stores</a> | <a href="#ref">Affiliates</a></p>
     </div> <div>
-    <p id="text03"><a href="#book">Books</a> | <a href="#more">More</a></p>
+    <p id="text03"><a href="#book">Books</a> | <a href="tdp">More</a></p>
   </div>
    </div>
   </div></div>
