--- a/tdp.html
+++ b/tdp.html
@@ -2145,7 +2145,11 @@
                                         <p id="text08">
                                             <strong>more by anoushka</strong>
                                         </p>
-                                        <p id="text02">here are some more apps and games i have worked on which i &#39;d like for you to check out. the credits are listed if it &#39;s a collab &lt;3</p>
+                                        <p id="text02">here are some more apps and games i have worked on which i &#39;d like for you to check out. 
+                                            the credits are listed if it &#39;s a collab &lt;3
+                                        <br> <br>
+                                        if you have any app or webapp ideas / want to collab or just give me some constructive feedback, send me an 
+                                            <a href=mailto:nushblogs@gmail.com>email</a> and i'll get back to you !</p>
                                     </div>
                                 </div>
                             </div>
