--- a/index.html
+++ b/index.html
@@ -389,6 +389,18 @@
     <li><a href="https://grammarly.go2cloud.org/SH3Cj" class="button n01">Add to Chrome</a></li>
   </ul>
   <br>
+  <p id="text28"><strong>Canva</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="https://partner.canva.com/anoushka" class="button n01">Sign up Now</a></li>
+  </ul>
+  <br>
   <h2 id="text26"><strong>Refferal links</strong></h2>
   
   <p id="text28"><strong>Honey</strong></p>
@@ -418,18 +430,7 @@
     checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
     frameworks.</span></p>
   <ul id="buttons06" class="buttons">
-    <li><a href="#" class="button n01">Sign up Now</a></li>
-  </ul><br>
-  <p id="text28"><strong>Canva</strong></p>
-  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
-    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
-    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
-    installation</u> available.</span><br> <br>
-    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
-    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
-    frameworks.</span></p>
-  <ul id="buttons06" class="buttons">
-    <li><a href="#" class="button n01">Sign up Now</a></li>
+    <li><a href="#http://www.fiverr.com/s2/11fa4ea2f7" class="button n01">Sign up Now</a></li>
   </ul>
     <br>
   <h2 id="text26"><strong>Promo Codes</strong></h2>
