--- a/tdp.html
+++ b/tdp.html
@@ -2316,6 +2316,35 @@
                                 <a href="#" class="button n01">Use Now</a>
                             </li>
                         </ul>
+                         <br>
+                         <p id="text14">
+                            <strong>Reading List Tracker</strong>
+                        </p>
+                        <p id="text15">
+                            <span>Keep a track of all the books you've read / are reading right now with this simple tracker. Store it's name and
+                            Authors name on the website and every time you return to the site on the same browser, it will show you the list of books
+                            from which you can add more or remove !</span>
+                        </p>
+                        <ul id="buttons03" class="buttons">
+                            <li>
+                                <a href="#" class="button n01">Use Now</a>
+                            </li>
+                        </ul>
+                         <br>
+                         <p id="text14">
+                            <strong>Task Manager</strong>
+                        </p>
+                        <p id="text15">
+                            <span>'Your password is weak' is a message we often see while signing up to online platforms and it's so frustrating to come 
+                            up with a new password every single time which fulfills all the criteria requirements of the password (upper case, lower case, number, symbol, 
+                            more than x letters and whatnot). Just use my password generator which gives you a unique alphanumeric combination based on your character
+                            requirement so you don't have to struggle with thinking of the password again.</span>
+                        </p>
+                        <ul id="buttons03" class="buttons">
+                            <li>
+                                <a href="#" class="button n01">Use Now</a>
+                            </li>
+                        </ul>
                         <br>
                              <p id="text17">
                             <strong>UserName Generator</strong>
