--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
 <title>Anoushka</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-<meta name="description" content="Hi"><meta property="og:site_name" content="Anoushka">
-<meta property="og:title" content="Anoushka"><meta property="og:type" content="website">
-<meta property="og:description" content="Hi">
-<meta property="og:image" content="https://hellobirdie.carrd.co/assets/images/card.jpg?v=e5006343">
-<meta property="og:image:type" content="image/jpeg"><meta property="og:image:width" content="1280">
-<meta property="og:image:height" content="800"><meta property="og:url" content="https://hellobirdie.carrd.co">
-<meta property="twitter:card" content="summary_large_image"><link rel="canonical" href="https://hellobirdie.carrd.co">
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,700,700italic" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="67Pg.gif" type="image/gif">
 
@@ -24,7 +17,7 @@
     <li><a class="n04" href="#"><svg><use xlink:href="#icon-9f9"></use></svg><span class="label">Music</span></a></li>
     </ul></div></div></div></div>
 
-<div id="container03" class="container columns full screen">
+<!-- <div id="container03" class="container columns full screen">
   <div class="wrapper"><div class="inner">
     <div>
     <p id="text22"><a href="#one">Apps</a> | <a href="#two"> Music</a> </p>
@@ -37,10 +30,10 @@
   </div>
    </div>
   </div></div>
-</header>
+</header> -->
 
 <section id="home-section" class="active"><p id="text10"><strong>About</strong></p><p id="text07">
-  <span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since 
+<!--   <span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since 
     I was 3 and have a national level diploma in Kathak Dance.</span><br> <br> <span>I'm also a singer and have been doing Indian Classical 
   Music for more than have a decade now. I can also play the harmonium and keyboard along with a little bit of tabla.</span><br> <br> 
   <span>Additionally, I'm a Full Stack Developer who has a strong backbone in Front End Web Development. I'm also a beginner at <mark>App 
@@ -81,12 +74,12 @@
       <p id="text20"><strong>Stream "Whole latte Love" </strong></p><p id="text21"><span>Stream my new and first ever single, "whole latte love" an instrumental ballad 
       which a part of a school project on all the major streaming services!</span><span>You can also add this to your studying/ regular vibing playlists
       which would help me a lot.</span> <br><br>
-      <!-- lipsum boogey text -->
+      <!-- lipsum boogey text 
       Praesent tincidunt eget massa at viverra. Pellentesque consectetur tellus nec elementum dapibus. Ut ac volutpat felis. Aliquam eu viverra orci,
       vel commodo nibh. Ut porttitor ante vitae augue porttitor, non tincidunt neque egestas. Nam bibendum faucibus venenatis. Vestibulum a 
       dui eros. Vivamus commodo, leo eget lacinia facilisis, metus ex malesuada nulla, ut maximus felis nibh vitae nunc. 
       Sed in orci et felis fringilla bibendum. Nunc bibendum eget mi ut bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      <!-- lipsum text end -->
+      <!-- lipsum text end 
       </p>
       <ul id="buttons05" class="buttons">
       <li><a href="#" class="button n01">Spotify</a></li>
@@ -101,7 +94,7 @@
 </section>
 
 <section id="shop-section" class="inactive" style="display: none;">
-  <br>
+  <br> -->
   <h2 id="text26"><strong>Shop from my stores</strong></h2>
   <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>Internationally available</strong></h2>
     <br>
